--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -21,7 +21,7 @@
                 android:id="@+id/layout_header"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_150sdp"
-                android:background="@color/violetLight"
+                android:background="@color/colorPrimary"
                 android:gravity="center"
                 android:orientation="vertical"
                 app:layout_constraintTop_toTopOf="parent">
@@ -155,7 +155,7 @@
                 android:text="@string/sign_in"
                 android:textColor="@color/colorWhite"
                 android:textSize="@dimen/_13ssp"
-                android:backgroundTint="@color/violetLight"
+                android:backgroundTint="@color/colorPrimary"
                 app:layout_constraintTop_toBottomOf="@id/card_sign_in"/>
 
 
