--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,15 +4,15 @@
 <!--    <color name="colorPrimaryDark">#3700B3</color>-->
 <!--    <color name="colorAccent">#03DAC5</color>-->
 
-    <color name="colorPrimaryDark">#c52481</color>
-    <color name="colorPrimary">#d21cab</color>
-    <color name="colorAccent">#d27272</color>
+<!--    <color name="colorPrimaryDark">#c52481</color>-->
+<!--    <color name="colorPrimary">#d21cab</color>-->
+<!--    <color name="colorAccent">#d27272</color>-->
     <color name="cayanLight">#d7478f</color>
     <color name="orangeLight">#fa836f</color>
     <color name="orangeStrong">#e94b3a</color>
-    <color name="violetStrong">#5c01b0</color>
-    <color name="violetLight">#8017cd</color>
-    <color name="violetOld">#6d245b</color>
+    <color name="colorPrimaryDark">#5c01b0</color>
+    <color name="colorPrimary">#8017cd</color>
+    <color name="colorAccent">#6d245b</color>
     <color name="greenHybridGray">#8c8768</color>
 
     <color name="colorPrimaryText">#212121</color>
