Complete Pop up detail and login screen loading dialog

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,4 +20,8 @@
         <item name="android:windowNoTitle">true</item>
     </style>
 
+    <style name="ProgressDialogTheme" parent="Theme.MaterialComponents.Light.Dialog">
+
+    </style>
+
 </resources>
