--- a/app/src/main/res/layout/activity_detail_screen.xml
+++ b/app/src/main/res/layout/activity_detail_screen.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="@dimen/_250sdp"
     android:layout_height="@dimen/_470sdp"
@@ -9,22 +9,24 @@
     android:clickable="true"
     android:id="@+id/root_view">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/card_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:layout_margin="@dimen/_5sdp"
-        android:elevation="3dp"
-        card_view:cardCornerRadius="@dimen/_2sdp">
+<!--    <androidx.cardview.widget.CardView-->
+<!--        android:id="@+id/card_view"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:layout_gravity="center"-->
+<!--        android:layout_margin="@dimen/_5sdp"-->
+<!--        android:elevation="3dp"-->
+<!--        card_view:cardCornerRadius="@dimen/_2sdp">-->
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_margin="@dimen/_5sdp"
             android:paddingBottom="@dimen/_10sdp">
 
             <ImageView
-                android:id="@+id/img_close"
+                android:id="@+id/detail_close"
                 android:layout_width="@dimen/_30sdp"
                 android:layout_height="@dimen/_30sdp"
                 android:src="@drawable/ic_close"
@@ -36,7 +38,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_160sdp"
                 android:background="?attr/selectableItemBackgroundBorderless"
-                android:src="@drawable/ic_placeholder_image"
+                tools:src="@drawable/ic_placeholder_image"
                 android:paddingStart="@dimen/_10sdp"
                 android:paddingEnd="@dimen/_10sdp"
                 android:layout_marginTop="@dimen/_35sdp"/>
@@ -49,7 +51,6 @@
                 android:paddingStart="@dimen/_10sdp"
                 android:paddingEnd="@dimen/_10sdp"
                 android:paddingTop="@dimen/_10sdp"
-                android:text="M18 FUEL™ 7.6L Compact Air Compressor"
                 android:textColor="@color/album_title"
                 android:textSize="@dimen/_15sdp" />
 
@@ -62,7 +63,6 @@
                 android:paddingBottom="@dimen/_5sdp"
                 android:paddingLeft="@dimen/_10sdp"
                 android:paddingRight="@dimen/_10sdp"
-                android:text="Price: $227.00"
                 android:textColor="@color/colorPrimaryText"
                 android:textSize="@dimen/_15sdp" />
 
@@ -78,6 +78,6 @@
 
         </RelativeLayout>
 
-    </androidx.cardview.widget.CardView>
+<!--    </androidx.cardview.widget.CardView>-->
 
 </LinearLayout>
