--- a/app/src/main/res/layout/item_card.xml
+++ b/app/src/main/res/layout/item_card.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:clickable="true" >
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card_view"
@@ -26,7 +27,7 @@
                 android:src="@drawable/ic_placeholder_image"
                 android:paddingStart="@dimen/_10sdp"
                 android:paddingEnd="@dimen/_10sdp"
-                android:clickable="true" />
+                android:clickable="false" />
 
             <TextView
                 android:id="@+id/item_name"
