--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,5 +23,6 @@
     <color name="colorHintText">#BDBDBD</color>
 
     <color name="album_title">#4c4c4c</color>
+    <color name="transparent">#80FFFFFF</color>
 
 </resources>
