Implemented Item details pop up and changing of bookmark status

--- a/app/src/main/res/layout/activity_detail_screen.xml
+++ b/app/src/main/res/layout/activity_detail_screen.xml
@@ -66,11 +66,21 @@
                 android:textColor="@color/colorPrimaryText"
                 android:textSize="@dimen/_15sdp" />
 
+            <ImageView
+                android:id="@+id/detail_bookmark"
+                android:layout_width="@dimen/_20sdp"
+                android:layout_height="@dimen/_25sdp"
+                android:layout_alignParentRight="true"
+                android:layout_below="@id/detail_name"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_bookmark_disable" />
+
             <WebView
                 android:id="@+id/web_details"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/detail_price"
+                android:layout_below="@id/detail_bookmark"
                 android:paddingStart="@dimen/_16sdp"
                 android:paddingEnd="@dimen/_16sdp"
                 android:gravity="center"
