--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -33,6 +33,42 @@
             android:orientation="vertical"
             android:padding="10dp">
 
+            <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/button_reload"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_40sdp"
+                android:layout_marginStart="@dimen/_20sdp"
+                android:layout_marginEnd="@dimen/_20sdp"
+                android:fontFamily="@font/ubuntu_bold"
+                android:includeFontPadding="false"
+                android:text="@string/reload"
+                android:textColor="@color/colorWhite"
+                android:layout_weight="1"
+                android:textSize="@dimen/_13ssp"
+                android:backgroundTint="@color/colorPrimary"
+                app:layout_constraintTop_toBottomOf="@id/card_sign_in"/>
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/button_sort"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_40sdp"
+                android:layout_marginStart="@dimen/_20sdp"
+                android:layout_marginEnd="@dimen/_20sdp"
+                android:fontFamily="@font/ubuntu_bold"
+                android:includeFontPadding="false"
+                android:text="@string/sort"
+                android:textColor="@color/colorWhite"
+                android:layout_weight="1"
+                android:textSize="@dimen/_13ssp"
+                android:backgroundTint="@color/colorPrimary"
+                app:layout_constraintTop_toBottomOf="@id/card_sign_in"/>
+        </LinearLayout>
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/tools_recyclerview"
                 android:layout_width="match_parent"
