Change status of book mark

--- a/app/src/main/res/layout/item_card.xml
+++ b/app/src/main/res/layout/item_card.xml
@@ -59,8 +59,9 @@
                 android:layout_width="@dimen/_20sdp"
                 android:layout_height="@dimen/_25sdp"
                 android:layout_alignParentRight="true"
-                android:layout_below="@id/item_thumbnail"
+                android:layout_below="@id/item_name"
                 android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginStart="@dimen/_10sdp"
                 android:scaleType="centerCrop"
                 android:src="@drawable/ic_bookmark_disable" />
 
