--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -50,8 +50,7 @@
                 android:textColor="@color/colorWhite"
                 android:layout_weight="1"
                 android:textSize="@dimen/_13ssp"
-                android:backgroundTint="@color/colorPrimary"
-                app:layout_constraintTop_toBottomOf="@id/card_sign_in"/>
+                android:backgroundTint="@color/colorPrimary"/>
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_sort"
@@ -65,8 +64,7 @@
                 android:textColor="@color/colorWhite"
                 android:layout_weight="1"
                 android:textSize="@dimen/_13ssp"
-                android:backgroundTint="@color/colorPrimary"
-                app:layout_constraintTop_toBottomOf="@id/card_sign_in"/>
+                android:backgroundTint="@color/colorPrimary"/>
         </LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
